# hnurm_2026_sentry

./: .gitignore  debug_uart_color.md  gesture.sh  logic_analysis.md  mapping.sh  navigation.sh  relocalization.sh  small1.sh  test.sh  ul.sh  ul2.sh  updown.sh  版本回溯.md
src/RMUL_Decision/: README.md
src/RMUL_Decision/src/hnurm_referee_sim/: CMakeLists.txt  package.xml
src/RMUL_Decision/src/hnurm_referee_sim/src/: referee_sim_node.cpp
src/RMUL_Decision/src/hnurm_rmul_decision/: CMakeLists.txt  package.xml
src/RMUL_Decision/src/hnurm_rmul_decision/docs/: RMUL2026.yaml  RMUL2026_point.pgm  RMUL2026_point.yaml
src/RMUL_Decision/src/hnurm_rmul_decision/include/hnurm_decision_gesture/: GameStart.hpp  PubRobotStatus.hpp  Status.hpp
src/RMUL_Decision/src/hnurm_rmul_decision/launch/: hnurm_decision.launch.py
src/RMUL_Decision/src/hnurm_rmul_decision/param/: params.yaml  simple_test.xml  t2.xml  test.xml  tree.xml  tree_example_unified.xml
src/RMUL_Decision/src/hnurm_rmul_decision/plugins/action/: PubRobotStatus.cpp
src/RMUL_Decision/src/hnurm_rmul_decision/plugins/condition/: GameStart.cpp  Status.cpp
src/RMUL_Decision/src/hnurm_rmul_decision/src/: decision.cpp
src/camera_calibration/src/camera_calibration/: calibrator.py  camera_calibrator.py
src/hnurm_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
src/hnurm_auto_aim/armor_detector/cmake_modules/: FindG2O.cmake
src/hnurm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp
src/hnurm_auto_aim/armor_solver/: README.md  package.xml
src/hnurm_auto_aim/rm_auto_aim/: CMakeLists.txt  package.xml
src/hnurm_bringup/: CMakeLists.txt  README.md  package.xml  sentry_manage_node.h
src/hnurm_bringup/config/: camera_info.yaml  launch_params.yaml
src/hnurm_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  camera_driver_params.yaml  hnurm_camera_params.yaml  hnurm_uart_params.yaml  video_player_params.yaml
src/hnurm_bringup/include/hnurm_bringup/: tf_transformer_node.hpp
src/hnurm_bringup/launch/: bringup.launch.py  nav_with_icp.launch.py  nav_with_mapping.launch.py  test.launch.py  tf_transformer.launch.py
src/hnurm_bringup/params/: bringup.yaml  extrinsic.yaml
src/hnurm_bringup/src/: compose_node.cpp  sentry_manage_node.cpp  tf_transformer_node.cpp
src/hnurm_camera/: CMakeLists.txt  package.xml
src/hnurm_camera/include/hnurm_camera/: Camera.h  CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h  PixelType.h  camera_node.hpp
src/hnurm_camera/params/: default.yaml
src/hnurm_camera/src/: Camera.cpp  camera_node.cpp
src/hnurm_fastlivo2/FAST-LIVO2/: CMakeLists.txt
src/hnurm_fastlivo2/FAST-LIVO2/Log/: mat_out.txt  (+2 more)
src/hnurm_interfaces/: CMakeLists.txt
src/hnurm_navigation/: CMakeLists.txt  package.xml
src/hnurm_navigation/launch/: bringup_launch.py  bringup_launch_debug.py  bringup_no_amcl_launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rviz_launch.py  slam_launch.py
src/hnurm_navigation/map/: RMUC.pgm  RMUC.yaml  RMUL.yaml  RMUL2026.pgm  RMUL2026_fake.pgm  RMUL2026_new.pgm  RMUL2026_new.yaml  RMUL2026_point.yaml  RMUL_test.pgm  RMUL_test.yaml  df_for_exam_clean.pgm  df_for_exam_clean.yaml  gesture_1.pgm  gesture_1.yaml  gesture_clean.pgm  gesture_clean.yaml  map_clean.pgm  map_clean.yaml  map_clean_clean.pgm  map_clean_clean.yaml  question1_clean.pgm  question1_clean.yaml  question3_clean.pgm  question3_clean.yaml  test.pgm  test.yaml  upanddown_clean.pgm  upanddown_clean.yaml
src/hnurm_navigation/params/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_steering.yaml  todo_steering.md
src/hnurm_navigation/rviz2/: nav.rviz2.rviz
src/hnurm_perception/hnurm_registration/src/registration/: 1.md  CMakeLists.txt  package.xml
src/hnurm_perception/hnurm_registration/src/registration/include/registration/: registration_node.hpp
src/hnurm_perception/hnurm_registration/src/registration/launch/: registration.launch.py  registration_rviz.launch.py
src/hnurm_perception/hnurm_registration/src/registration/params/: default.yaml
src/hnurm_perception/hnurm_registration/src/registration/rviz/: RVIZ_README.md  relocalization_view.rviz
src/hnurm_perception/hnurm_registration/src/registration/src/: main.cpp  registration_node.cpp
src/hnurm_perception/imu_complementary_filter/: CMakeLists.txt
src/hnurm_perception/ldlidar_stl_ros2/: test.md
src/hnurm_perception/linefit_ground_segementation_ros2/: README_zh.md
src/hnurm_perception/pcd2pgm/: CMakeLists.txt  package.xml
src/hnurm_perception/pcd2pgm/include/pcd2pgm/: pcd2pgm_node.hpp
src/hnurm_perception/pcd2pgm/launch/: pcd2pgm.launch.py
src/hnurm_perception/pcd2pgm/params/: default.yaml
src/hnurm_perception/pcd2pgm/src/: main.cpp  pcd2pgm_node.cpp
src/hnurm_perception/pointcloud_filter/: CMakeLists.txt  README.md  package.xml
src/hnurm_perception/pointcloud_filter/include/pointcloud_filter/: pointcloud_filter_node.hpp
src/hnurm_perception/pointcloud_filter/launch/: hnurm_pointcloud_filter.launch.py
src/hnurm_perception/pointcloud_filter/params/: default.yaml
src/hnurm_perception/pointcloud_filter/src/: main.cpp  pointcloud_filter_node.cpp
src/hnurm_perception/pointcloud_to_laserscan/: README_zh.md  pointcloud_to_laserscan.md
src/hnurm_robot_description/: CMakeLists.txt  README.md  package.xml
src/hnurm_robot_description/urdf/: rm_gimbal.urdf.xacro
src/hnurm_uart/: CMakeLists.txt  package.xml
src/hnurm_uart/include/hnurm_uart/: Serialcodec.h  bsp_crc16.h  bsp_crc8.h  protocol.h  serial.h  uart_node.hpp
src/hnurm_uart/launch/: hnurm_uart.launch.py
src/hnurm_uart/params/: default.yaml
src/hnurm_uart/src/: main.cpp  uart_node.cpp
src/hnurm_uart/src/CRC/: bsp_crc16.cpp  bsp_crc8.cpp
src/hnurm_uart/src/Protocol/: protocol.cpp
src/hnurm_uart/src/Serial/: Serialcodec.cpp  serial.cpp
src/hnurm_utils/: CMakeLists.txt  README.md  package.xml
src/hnurm_utils/src/: heartbeat.cpp  url_resolver.cpp
(+79 files in other folders)
