<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hnurm_bringup</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="1422776724@qq.com">yc</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>angles</depend>
    <depend>Eigen3</depend>
    <depend>OpenCV</depend>
    <depend>rm_auto_aim</depend>
    <depend>rm_serial_driver</depend>
    <depend>rm_rune</depend>

    <depend>hnurm_interfaces</depend>
    <depend>hnurm_camera</depend>
    <depend>hnurm_uart</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
